--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <div class="bg-space-orange lights"></div>
     </div>
     
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./index.css"></script>
   </body>
 </html>
